Add instruction url
