# app/Http/Requests/UpdateDeviceRequest.php
@@ -24,6 +24,7 @@ class UpdateDeviceRequest extends FormRequest
             "location" => "sometimes|required|string|max:255",
             "installation_date" => "nullable|date",
             "notes" => "nullable|string",
+            "instruction_url" => "nullable|url|max:2048",
         ];
     }
 }
